--- a/README
+++ b/README
@@ -11,3 +11,8 @@ This package is moved to the Debian git repository at
 http://anonscm.debian.org/cgit/debian-astro/packages/montage.git
 
 in order to be included in the next Debian and Ubuntu releases.
+
+
+PPA packaging related issues should be reported here
+
+https://github.com/radio-astro/packaging
